# GameOfLife

./: .gitignore  CMakeLists.txt  CoordException.cpp  CoordException.h  Game_of_Life.cpp  Game_of_Life_simple.cpp  MainTest.cpp  README.md  grid.cpp  grid.h  world.cpp  world.h  zoo.cpp  zoo.h
cxxopts/: cxxopts.hxx
test_inputs/: GLIDER.gol  MALFORMED_CELL.gol  MALFORMED_NEWLINE.gol  MALFORMED_SIZE.gol
tests/: test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_13.cpp  test_14.cpp  test_15.cpp  test_16.cpp  test_17.cpp  test_18.cpp  test_19.cpp  test_2.cpp  test_20.cpp  test_21.cpp  test_22.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp
